WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
210099
TextManipulationController fails to replace a paragraph that ends with a br
https://bugs.webkit.org/show_bug.cgi?id=210099
Summary
TextManipulationController fails to replace a paragraph that ends with a br
Ryosuke Niwa
Reported
2020-04-07 00:59:29 PDT
Replacing a paragraph content fails with ContentChanged if the paragraph ends with a br.
Attachments
Fixes the bug
(9.36 KB, patch)
2020-04-07 01:03 PDT
,
Ryosuke Niwa
wenson_hsieh
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2020-04-07 01:00:21 PDT
<
rdar://problem/61381732
>
Ryosuke Niwa
Comment 2
2020-04-07 01:03:11 PDT
Created
attachment 395658
[details]
Fixes the bug
Louie Livon-Bemel
Comment 3
2020-04-07 10:45:57 PDT
(In reply to Ryosuke Niwa from
comment #2
)
> Created
attachment 395658
[details]
> Fixes the bug
Typo: in `CompleteTextManipulationReplaceParagraphssSeparatedByWrappedBR`, 'Paragraphss' should be 'Paragraphs'.
Wenson Hsieh
Comment 4
2020-04-07 10:55:46 PDT
Comment on
attachment 395658
[details]
Fixes the bug r=me (with Louie’s comment above)
Ryosuke Niwa
Comment 5
2020-04-07 11:10:11 PDT
Committed
r259647
: <
https://trac.webkit.org/changeset/259647
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug